# twoWaySlab

./: ACI_318M25_COMPLETE_LIBRARY.md  ACI_318M25_LIBRARY.md  IMPLEMENTATION_ROADMAP.md  PROJECT_STRUCTURE_PROPOSAL.md  README_Enhanced.md  THAI_EARTHQUAKE_LOAD_LIBRARY.md  THAI_MINISTRY_REGULATION.md  THAI_STANDARDS.md  THAI_UNITS.md  THAI_WIND_LOAD_LIBRARY.md  aci318m25.py  aci318m25_beam.py  aci318m25_column.py  aci318m25_complete.py  aci318m25_design_report.txt  aci318m25_diaphragm.py  aci318m25_footing.py  aci318m25_slab.py  aci318m25_wall.py  config.json  config.py  example_aci318m25_usage.py  example_thai_earthquake_usage.py  example_thai_wind_usage.py  i18n.py  report_enhanced.py  run_tests.py  test_aci318m25.py  test_aci318m25_complete.py  test_ministry_regulation.py  test_thai_earthquake_load.py  test_thai_wind_load.py  thaiEarthquakeLoad.py  thaiMinistryReg.py  thaiWindLoad.py  thiRc.py  twoWaySlab_enhanced.py  units.py  validation.py
structural-design-standards/: .gitignore  LICENSE  README.md  aci_demo.py  pyproject.toml  simple_aci_demo.py  simple_test.py  simple_thai_test.py  test_aci_implementation.py  test_aci_members_complete.py  test_thai_integration.py  thai_ministry_demo.py  validate_ministry_2566_compliance.py  validate_thai_phase8.py
structural-design-standards/data/: __init__.py  material_databases.py  reference_solutions.py  validation_data.py
structural-design-standards/docs/examples/basic_usage/: aci_beam_example.py  comparison_example.py  thai_slab_example.py
structural-design-standards/docs/source/: conf.py  index.md
structural-design-standards/docs/source/api/: aci.rst  thai.rst  utils.rst
structural-design-standards/docs/tutorials/: aci_tutorial.md  getting_started.md  thai_tutorial.md
structural-design-standards/i18n/: language_utils.py  translator.py
structural-design-standards/locales/th/LC_MESSAGES/: aci.po  common.po  thai.po
structural-design-standards/resources/: README.md  __init__.py
structural-design-standards/resources/schemas/: beam-design.json  column-design.json
structural-design-standards/scripts/: __init__.py  build_docs.py  check_standards.py  generate_code.py  run_tests.py
structural-design-standards/structural_standards/: __init__.py
structural-design-standards/structural_standards/aci/: __init__.py
structural-design-standards/structural_standards/aci/aci318m25/: __init__.py  load_combinations.py
structural-design-standards/structural_standards/aci/aci318m25/materials/: concrete.py  steel.py
structural-design-standards/structural_standards/aci/aci318m25/members/: __init__.py  beam_design.py  column_design.py  diaphragm_design.py  footing_design.py  slab_design.py  wall_design.py
structural-design-standards/structural_standards/base/: __init__.py  design_base.py  material_base.py  standard_interface.py
structural-design-standards/structural_standards/thai/: __init__.py
structural-design-standards/structural_standards/thai/ministry_2566/: __init__.py  design_requirements.py  load_combinations.py  ministry_regulation.py
structural-design-standards/structural_standards/thai/ministry_2566/loads/: __init__.py  seismic_loads.py  wind_loads.py
structural-design-standards/structural_standards/thai/ministry_2566/materials/: concrete.py  steel.py
structural-design-standards/structural_standards/thai/ministry_2566/units/: __init__.py  thai_units.py
structural-design-standards/structural_standards/utils/: __init__.py  calculations.py  units.py  validation.py
structural-design-standards/tests/: __init__.py  conftest.py
structural-design-standards/tests/benchmarks/: aci_benchmarks.py  thai_benchmarks.py
structural-design-standards/tests/test_aci/test_aci318m25/: test_beam_design.py  test_column_design.py  test_diaphragm_design.py  test_footing_design.py  test_integration.py  test_materials.py  test_member_design.py  test_slab_design.py  test_wall_design.py
structural-design-standards/tests/test_base/: test_base_classes.py
structural-design-standards/tests/test_integration/: __init__.py  test_cross_standard.py
structural-design-standards/tests/test_thai/: __init__.py
structural-design-standards/tests/test_thai/test_ministry_2566/: __init__.py  test_load_combinations.py
structural-design-standards/tests/test_utils/: __init__.py  test_validation.py
structural-design-standards/tests/validation/: aci_validation_cases.py  thai_validation_cases.py
structural-design-standards/tools/: __init__.py  benchmarking.py  code_generators.py  validators.py
translations/: en.json  ja.json  th.json
